--- a/app/templates/user/profile.html
+++ b/app/templates/user/profile.html
@@ -1,325 +1,138 @@
-{% if session['role']=='user' %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>EyeKids</title>
-  <!-- Link to Google Fonts Raleway -->
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-          <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-          <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-          <script
-              src="/static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
-              <style>
-                body {
-                  min-height: 100vh;
-                  font-family: 'Raleway', sans-serif;
-                  font-weight: 600;
-                }
-                .navbar{
-                  height: 10vh;
-                  position: fixed;
-                  top: 0;
-                  z-index: 2;
-                  left: 0;
-                  width: 250px;
-                  background-color: #f8f9fa00;
-                }
-                .sidebar {
-                  height: 100vh;
-                  position: fixed;
-                  top: 65px;
-                  left: 0;
-                  width: 250px;
-                  display: flex;
-                  flex-direction: column;
-                  justify-content: space-between;
-                  background-color: #f8f9fa;
-                  border-right: 2px solid #ddd;
-                  transition: transform 0.3s ease;
-                  padding: 20px;
-                }
-                .sidebar .content {
-                  flex-grow: 1;
-                }
-                .sidebar.collapsed {
-                  transform: translateX(-100%);
-                }
-                .sidebar .nav-link {
-                  color: #000;
-                }
-                .sidebar .nav-link:hover {
-                  background-color: #e9ecef;
-                }
-                .sidebar .social-icons {
-                  height: 100px;
-                  margin-top: auto;
-                  text-align: center;
-                }
-                .content {
-                  margin-left: 250px;
-                  padding: 20px;
-                  transition: margin-left 0.3s ease;
-                }
-                .width-mobile {
-                  width: 100%;
-                }
-                .width-desktop {
-                  width: calc(100% - 250px);
-                }
-                .content.collapsed {
-                  margin-left: 0;
-                  width: 100%;
-                }
-                .btn-custom {
-                  border-radius: 60px;
-                }
-                .custom-bg-info {
-                  background-color: #1F4590;
-                }
-                .custom-text-info {
-                  color: #1F4590;
-                }
-                .custom-bg-warning {
-                  background-color: #FFA451;
-                }
-                .custom-text-warning {
-                  color: #FFA451;
-                }
-                .font-bold {
-                  font-weight: 700;
-                }
-                .font-semibold {
-                  font-weight: 600;
-                }
-                .font-regular {
-                  font-weight: 400;
-                }
-                .toggle-btn {
-                  cursor: pointer;
-                }
-                .baseline {
-                  align-items: baseline;
-                }
-                .custom-border-size {
-                  height: 4px;
-                  border: none;
-                  background-color: #1F4590;
-                }
-                .nav-link {
-                  color: #ffa451 !important;
-                }
-                .border-medium {
-                  border-radius: 10px;
-                }
-                .custom-border-info {
-                  border-color: #1F4590;
-                }
-                .text-white{
-                  color: #fff;
-                }
-              </style>            
-      
-</head>
-<body>
-  <!-- Topbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="d-flex baseline">
-      <a class="navbar-brand d-flex baseline" href="/user/dashboard">
-        <h3 class="custom-text-info font-semibold">Eye</h3>
-        <p class="custom-text-warning font-semibold">kids</p>
-      </a>
-      <!-- Toggle Button -->
-      <div class="toggle-btn">
-        <button id="sidebarToggle" class="btn btn-secondary" aria-expanded="false" aria-controls="sidebar">☰</button>
-      </div>
-    </div>
-  </nav>
-  <!-- Sidebar -->
-  <nav class="sidebar bg-light p-2" id="sidebar" aria-labelledby="sidebarToggle">
-    <div class="text-center">
-      <img src="../static/icon/profile_default.svg" alt="icon_profile_Default">
-      <p class="font-semibold custom-text-warning">{{session['full_name']}}</p>
-      <hr class="custom-bg-info custom-border-size ">
-    </div>
-    <ul class="nav flex-column text-start pl-3">
-      <li class="nav-item">
-        <a class="nav-link" href="/user/dashboard"><img src="../static/icon/jadwal.svg" height="25" width="25" alt="icon_dashboard">  Dashboard</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/user/profile"><img src="../static/icon/icon_profile.svg" height="25" width="25" alt="icon_username">  Profile</a>
-      </li>
-    </ul>
-    <div>
-      <hr class="custom-bg-info custom-border-size ">
-    </div>
-    <ul class="nav flex-column text-start pl-3">
-      <li class="nav-item">
-        <a class="nav-link" href="/ganti_password"><img src="../static/icon/ganti_password.svg" height="25" width="25" alt="icon_ganti_password">  Ganti Password</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/keluar"><img src="../static/icon/logout.svg" height="25" width="25" alt="icon_keluar">  Keluar</a>
-      </li>
-    </ul>
-    <div>
-      <hr class="custom-bg-info custom-border-size ">
-    </div>
-    <div class="text-center social-icons">
-      <a href="" class="mr-3"><img src="../static/icon/twitter.svg" height="25" width="25" alt="Twitter"></a>
-      <a href="" class="mr-3"><img src="../static/icon/instagram.svg" height="25" width="25" alt="Instagram"></a>
-      <a href=""><img src="../static/icon/whatsapp.svg" height="25" width="25" alt="WhatsApp"></a>
-    </div>
-  </nav>
+{% extends 'user/layout_user.html' %}
+{% block content %}
+ <!-- Content -->
+ <div class="content" style="margin-top: 80px;" id="mainContent">
+  <!-- Flash Message -->
+  {% with messages = get_flashed_messages() %}
+  {% if messages %}
+  <div id="flashMessage" class="alert alert-success alert-dismissible fade show" role="alert">
+    {{ messages[0] }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  {% endif %}
+  {% endwith %}
 
-   <!-- Content -->
-   <div class="content" id="mainContent">
-    <!-- Flash Message -->
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <div id="flashMessage" class="alert alert-success alert-dismissible fade show" role="alert">
-      {{ messages[0] }}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    {% endif %}
-    {% endwith %}
-
-    <!-- Profile Form -->
-    <div class="card">
-      <div class="card-body">
-        <h1 class="text-center font-semibold" style="color: #FFA451;">Profile</h1>
-        {% if error %}
-        <div class="alert alert-danger">{{ error }}</div>
-        {% endif %}
-        <form id="form-now">
-          <div class="form-group">
-            <label class="font-semibold" style="color: #FFA451;"><img src="../static/icon/username.svg" alt="Username Icon"> Nama orang tua</label>
-            <input type="text" class="form-control " name="full_name" id="full_name" value="{{ session['full_name'] }}">
-          </div>
-          <div class="form-group">
-            <label class="font-semibold" style="color: #FFA451;"><img src="../static/icon/email.svg" alt="Email Icon"> Email</label>
-            <input type="email" class="form-control " name="email" id="email" value="{{ session['email'] }}">
-          </div>
-          <div class="text-center">
-            <button type="button" onclick="updateProfile()" class="btn btn-custom custom-bg-warning text-white">Simpan</button>
-          </div>
-        </form>
-      </div>
-    </div>
-
-    <!-- Anak-anak Table -->
-    <div class="mt-3">
-      <button class="btn btn-custom-warning mb-2 custom-bg-info text-white">Tambah Data</button>
-      <table id="bookingsTable" class="table table-bordered">
-        <thead>
-          <tr>
-            <th>No</th>
-            <th>Nama Anak</th>
-            <th>Usia Anak</th>
-            <th>Jenis Kelamin</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for anak in anak_anak %}
-          <tr>
-            <td>{{ anak.id }}</td>
-            <td>{{ anak.nama_anak }}</td>
-            <td>{{ anak.usia_anak }}</td>
-            <td>{{ anak.jenis_kelamin }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+  <!-- Profile Form -->
+  <div class="card">
+    <div class="card-body">
+      <h1 class="text-center font-semibold" style="color: #FFA451;">Profile</h1>
+      {% if error %}
+      <div class="alert alert-danger">{{ error }}</div>
+      {% endif %}
+      <form id="form-now">
+        <div class="form-group">
+          <label class="font-semibold" style="color: #FFA451;"><img src="../static/icon/username.svg" alt="Username Icon"> Nama orang tua</label>
+          <input type="text" class="form-control " name="full_name" id="full_name" value="{{ session['full_name'] }}">
+        </div>
+        <div class="form-group">
+          <label class="font-semibold" style="color: #FFA451;"><img src="../static/icon/email.svg" alt="Email Icon"> Email</label>
+          <input type="email" class="form-control " name="email" id="email" value="{{ session['email'] }}">
+        </div>
+        <div class="text-center">
+          <button type="button" onclick="updateProfile()" class="btn btn-custom custom-bg-warning text-white">Simpan</button>
+        </div>
+      </form>
     </div>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script>
-    $(document).ready(function () {
-      $('#bookingsTable').DataTable();
-      function adjustContentStyle() {
-        const content = $('.content');
-        const sidebarWidth = 250; // Width of the sidebar in pixels
+  <!-- Anak-anak Table -->
+  <div class="mt-3">
+    <h1 class="text-center font-semibold">Data Anak</h1>
+    <button class="btn btn-custom-warning mb-2 custom-bg-info text-white">Tambah Data</button>
+    <table id="bookingsTable" class="table table-bordered">
+      <thead>
+        <tr>
+          <th>No</th>
+          <th>Nama Anak</th>
+          <th>Usia Anak</th>
+          <th>Jenis Kelamin</th>
+          <th>aksi</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for anak in data %}
+        <tr>
+          <td>{{ anak.id }}</td>
+          <td>{{ anak.nama_anak }}</td>
+          <td>{{ anak.usia_anak }}</td>
+          <td>{{ anak.jenis_kelamin }}</td>
+          <td>
+            <button class="btn btn-custom-warning mb-2 custom-bg-warning text-white">Edit Data</button>
+            <button class="btn btn-custom-danger mb-2 custom-bg-danger text-white">Hapus Data</button></td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</div>
 
-        if ($(window).width() >= 500) {
-          // Desktop view
-          content.addClass('width-desktop').removeClass('width-mobile');
-        } else {
-          // Mobile view
-          content.addClass('width-mobile').removeClass('width-desktop');
-        }
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script>
+  $(document).ready(function () {
+    $('#bookingsTable').DataTable();
+    function adjustContentStyle() {
+      const content = $('.content');
+      const sidebarWidth = 250; // Width of the sidebar in pixels
+
+      if ($(window).width() >= 500) {
+        // Desktop view
+        content.addClass('width-desktop').removeClass('width-mobile');
+      } else {
+        // Mobile view
+        content.addClass('width-mobile').removeClass('width-desktop');
       }
+    }
 
-      // Adjust styles on page load
+    // Adjust styles on page load
+    adjustContentStyle();
+
+    // Adjust styles on window resize
+    $(window).resize(adjustContentStyle);
+
+    $('#sidebarToggle').on('click', function () {
+      $('.sidebar').toggleClass('collapsed');
+      $('#mainContent').toggleClass('collapsed');
       adjustContentStyle();
-
-      // Adjust styles on window resize
-      $(window).resize(adjustContentStyle);
-
-      $('#sidebarToggle').on('click', function () {
-        $('.sidebar').toggleClass('collapsed');
-        $('#mainContent').toggleClass('collapsed');
-        adjustContentStyle();
-      });
     });
-      function updateProfile() {
-        event.preventDefault(); // Prevent form submission
-                
-                // Ambil nilai dari form
-                var full_name= $('#full_name').val();
-                var email = $('#email').val();
-                var nm_anak = $('#nm_anak').val();
-                var usia_anak = $('#usia_anak').val();
+  });
+    function updateProfile() {
+      event.preventDefault(); // Prevent form submission
+              
+              // Ambil nilai dari form
+              var full_name= $('#full_name').val();
+              var email = $('#email').val();
+              var nm_anak = $('#nm_anak').val();
+              var usia_anak = $('#usia_anak').val();
 
-                // Kirim data menggunakan AJAX
-                $.ajax({
-                    type: 'POST',
-                    url: '/user/update_profile',  // Ganti dengan URL endpoint Anda
-                    data: {
-                        full_name: full_name,
-                        email: email,
-                        nama_anak: nm_anak,
-                        usia_anak: usia_anak,
-                    },
-                    success: function(response) {
-                        // Tampilkan pesan sukses atau lakukan tindakan lain setelah sukses
-                        alert(response.msg);
-                        if(response.msg === "Profil berhasil diperbarui"){
-                            document.location.href = "/user/dashboard";
-                        }
-                    },
-                    error: function(xhr) {
-                        // Tangani dan tampilkan pesan error dari server
-                        var errorMsg = "Terjadi kesalahan";
-                        if (xhr.responseJSON && xhr.responseJSON.msg) {
-                            errorMsg = xhr.responseJSON.msg;
-                        }
-                        alert(errorMsg);
-                    }
-                });
-      }
-  </script>
-      <script>
-        // Hide the flash message after 1 second
-        setTimeout(function() {
-          $('#flashMessage').fadeOut('fast');
-        }, 1000); // Adjust the timeout value as needed
-      </script>
-        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
-{% else %}
-    <!-- Jika jwt_token tidak ada -->
-    <script>
-        window.location.href = "/";
-    </script>
-{% endif %}
+              // Kirim data menggunakan AJAX
+              $.ajax({
+                  type: 'POST',
+                  url: '/user/update_profile',  // Ganti dengan URL endpoint Anda
+                  data: {
+                      full_name: full_name,
+                      email: email,
+                      nama_anak: nm_anak,
+                      usia_anak: usia_anak,
+                  },
+                  success: function(response) {
+                      // Tampilkan pesan sukses atau lakukan tindakan lain setelah sukses
+                      alert(response.msg);
+                      if(response.msg === "Profil berhasil diperbarui"){
+                          document.location.href = "/user/dashboard";
+                      }
+                  },
+                  error: function(xhr) {
+                      // Tangani dan tampilkan pesan error dari server
+                      var errorMsg = "Terjadi kesalahan";
+                      if (xhr.responseJSON && xhr.responseJSON.msg) {
+                          errorMsg = xhr.responseJSON.msg;
+                      }
+                      alert(errorMsg);
+                  }
+              });
+    }
+</script>
+{% endblock %}
