--- a/app/templates/admin/penyakit_terbanyak.html
+++ b/app/templates/admin/penyakit_terbanyak.html
@@ -181,6 +181,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
+    document.querySelectorAll('input').forEach(function(input) {
+    input.addEventListener('keydown', function(e) {
+        if (e.key === 'Enter') {
+            e.preventDefault(); 
+        }
+    });
+});
+
     $(document).ready(function () {
     function adjustContentStyle() {
         const content = $('.content');
