--- a/app/templates/forgot_password.html
+++ b/app/templates/forgot_password.html
@@ -59,7 +59,7 @@
 
   <!-- Call to Action Section -->
   <section class="container my-5" >
-    <div class="card border-medium" style="border-radius: 20px;">
+    <div class="card border-medium " style="border-radius: 20px; background-color: #a1adc5;">
         <div class="card-body text-center ">
             <h1 class="font-semibold custom-text-warning">Ganti Password</h1>
             <form class="form text-center" id="form-now">
@@ -76,26 +76,35 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
+    document.querySelectorAll('input').forEach(function(input) {
+    input.addEventListener('keydown', function(e) {
+        if (e.key === 'Enter') {
+            e.preventDefault(); 
+        }
+    });
+});
+
      function kirim(){
         $.ajax({
             url: '/forgotpassword',
             method: 'POST',
             contentType: 'application/json',
             data: JSON.stringify({
-                password_lama:document.getElementById("password_lama").value,
-                password_baru:document.getElementById("password_baru").value
+                email:document.getElementById("email").value,
             }),
             success: function(response) {
                 // Proses respons dari server
                 console.log(response);
-                if (response.msg="SUKSES"){
-                    alert("Sukses Silahkan Cek Email Anda")
-                }
-                else{
-                  alert(response.msg)
-                }
-                
-            }
+                alert(response.msg);
+            },
+            error: function(xhr) {
+                      // Tangani dan tampilkan pesan error dari server
+                      var errorMsg = "Terjadi kesalahan pada Server";
+                      if (xhr.responseJSON && xhr.responseJSON.msg) {
+                          errorMsg = xhr.responseJSON.msg;
+                      }
+                      alert(errorMsg);
+                  }
         });
     }
     document.getElementById("submit").addEventListener("click", kirim);</script>
