--- a/app/templates/ganti_password.html
+++ b/app/templates/ganti_password.html
@@ -78,6 +78,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
+    document.querySelectorAll('input').forEach(function(input) {
+    input.addEventListener('keydown', function(e) {
+        if (e.key === 'Enter') {
+            e.preventDefault(); 
+        }
+    });
+});
+
      function kirim(){
         $.ajax({
             url: '/ganti_password',
@@ -90,8 +98,9 @@
             success: function(response) {
                 // Proses respons dari server
                 console.log(response);
-                if (response.msg="SUKSES"){
+                if (response.msg="Berhasil Update Password"){
                   var role = "{{ session['role'] }}"
+                  alert(response.msg)
                   if(role === "user"){
                     window.location.href = '/user/dashboard'
 
@@ -105,7 +114,15 @@
                   alert(response.msg)
                 }
                 
-            }
+            },
+            error: function(xhr) {
+                      // Tangani dan tampilkan pesan error dari server
+                      var errorMsg = "Terjadi kesalahan pada Server";
+                      if (xhr.responseJSON && xhr.responseJSON.msg) {
+                          errorMsg = xhr.responseJSON.msg;
+                      }
+                      alert(errorMsg);
+                  }
         });
     }
     document.getElementById("submit").addEventListener("click", kirim);</script>
