--- a/app/templates/reset_password.html
+++ b/app/templates/reset_password.html
@@ -62,7 +62,7 @@
     <div class="card border-medium" style="border-radius: 20px;">
         <div class="card-body text-center ">
             <h1 class="font-semibold custom-text-warning">Ganti Password</h1>
-            <form class="form text-center" id="form-now">
+            <form class="form text-center"  id="form-now">
                 <input class="btn bg-white mt-3 mb-3 text-center col-md-6 font-semibold font-regular" type="password" id="password_baru" name="password" placeholder="password baru"><br>
                 <button id="submit" type="button" class="col-md-6 mt-3 mb-3 btn btn-custom custom-bg-warning text-white">
                 <h4 class="font-semibold" style="margin-bottom: 0px;">Submit</h4>
@@ -76,6 +76,14 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
+    document.querySelectorAll('input').forEach(function(input) {
+    input.addEventListener('keydown', function(e) {
+        if (e.key === 'Enter') {
+            e.preventDefault(); 
+        }
+    });
+});
+
      function kirim(){
         var currentUrl = window.location.href;
         console.log(currentUrl);
@@ -84,19 +92,23 @@
             method: 'POST',
             contentType: 'application/json',
             data: JSON.stringify({
-                password_baru:document.getElementById("password_baru").value
+                password:document.getElementById("password_baru").value
             }),
             success: function(response) {
                 // Proses respons dari server
                 console.log(response);
-                if (response.msg="SUKSES"){
-                  alert("pasword berhasil diubah")
+                if (response.msg === "SUKSES") {
+                alert("password berhasil diubah")
                 }
-                else{
-                  alert(response.msg)
-                }
-                
-            }
+            },
+            error: function(xhr) {
+                      // Tangani dan tampilkan pesan error dari server
+                      var errorMsg = "Terjadi kesalahan pada Server";
+                      if (xhr.responseJSON && xhr.responseJSON.msg) {
+                          errorMsg = xhr.responseJSON.msg;
+                      }
+                      alert(errorMsg);
+                  }
         });
     }
     document.getElementById("submit").addEventListener("click", kirim);</script>
