--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -205,6 +205,14 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
     $(document).ready(function () {
+      document.querySelectorAll('input').forEach(function(input) {
+    input.addEventListener('keydown', function(e) {
+        if (e.key === 'Enter') {
+            e.preventDefault(); 
+        }
+    });
+});
+
     function adjustContentStyle() {
         const content = $('.content');
       const sidebar = document.querySelector('.sidebar');
